[package]
name = "angry_crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
base64 = "0.13.0"
colored = "2.0.0"
rand_core = "0.5.0"
rtnetlink = "0.8.1"
serde = { version = "1.0.130", features = ["derive"] }
wireguard-uapi = "2.0.1"
x25519-dalek = "1.2.0"
